--- a/template/layout/buscar.html.twig
+++ b/template/layout/buscar.html.twig
@@ -1,4 +1,4 @@
-<form class="form form-horizontal" action="{{constant("URL_SISTEMA")}}buscar">
+<form name="buscar_carro" id="buscar_carro" class="form form-horizontal" action="{{constant("URL_SISTEMA")}}buscar">
     <fieldset>
         <legend>Datos de busqueda</legend>
         <div class="row">
