--- a/template/carro/admin.html.twig
+++ b/template/carro/admin.html.twig
@@ -48,4 +48,11 @@
     {{paginado|raw}}
     </div>
 </div>
+<div class="row">
+    <div class="span12">
+        <div class="well">
+            <a href="{{constant('URL_SISTEMA')}}carro/Registrar" class="btn btn-primary">Agregar Nuevo Registro</a>
+        </div>
+    </div>
+</div>
 {% endblock %}
