--- a/template/carro/formulario.html.twig
+++ b/template/carro/formulario.html.twig
@@ -334,7 +334,7 @@
             <div class="form-actions">
                 <input class="btn" type="reset" name="borrar" value="Resetear"/>
                 {% if accion != "ver" %}
-                <input class="btn btn-primary" type="submit" name="accion" value="{{accion|title}}"/>
+                <input class="btn btn-primary" type="submit" name="accion" value="{{get.accion|title}}"/>
                 {% endif %}
             </div>
         </fieldset>
