--- a/template/login.html.twig
+++ b/template/login.html.twig
@@ -11,7 +11,7 @@
                 <div class="control-group">
                     <label class="control-label">Login</label>
                     <div class="controls">
-                        <input placeholder="Nombre de Usuario" type="text" name="login" />
+                        <input class="required" placeholder="Nombre de Usuario" type="text" name="login" required="true" />
                     </div>
                 </div>
                 <div class="control-group">
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="form-actions">
-                    <input class="btn btn-primary" type="submit" name="submit" value="iniciar sesion"/>
+                    <input class="required" required="true" class="btn btn-primary" type="submit" name="submit" value="iniciar sesion"/>
                 </div>
             </fieldset>
         </form>
