Avances en modulo de carro y usuario

--- a/template/carro/formulario.html.twig
+++ b/template/carro/formulario.html.twig
@@ -1,11 +1,11 @@
 {% extends "layout/base.html.twig" %}
 
 {# TITULO #}
-{% block titulo accion|title ~ ' Auto' %}
+{% block titulo get.accion|title ~ ' Auto' %}
 
 {# HEAD #}
 {% block head %}
-<script src="{{constant('URL_SISTEMA')}}js/jquery-validate/localization/messages_es.js"></script>
+
 <script>
             $(document).ready(function(){
                 $("#registrar").validate({
@@ -60,7 +60,7 @@
                     <div class="control-group">
                         <label class="control-label" for="tipo_vehiculo_id">Tipo de vehículo <sup>*</sup> </label>
                         <div class="controls">
-                            <select name="tipo_vehiculo_id" class="required">
+                            <select name="tipo_vehiculo_id" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="">--</option>
                                 {% for tipo in tipo_vehiculos %}
                                 <option value="{{ tipo.id }}" {{registro.tipo_vehiculo == tipo.id?" selected='selected' ":"" }}>{{ tipo.nombre }}</option>
@@ -71,7 +71,7 @@
                     <div class="control-group">
                         <label class="control-label" for="marca_id">Marca<sup>*</sup> </label>
                         <div class="controls">
-                            <select id="marca" name="marca_id" id="marcas" class="required">
+                            <select id="marca" name="marca_id" id="marcas" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 {% for marca in marcas %}
                                     <option value="{{marca.id}}" {{registro.marca_id == marca.id?" selected='selected' ":"" }}> {{marca.nombre|title}} </option>
                                 {% else %}
@@ -83,7 +83,7 @@
                     <div class="control-group">
                         <label class="control-label" for="modelo_id">Modelo <sup>*</sup></label>
                         <div class="controls">
-                            <select id="modelo" name="modelo_id" id="modelos" class="required">
+                            <select id="modelo" name="modelo_id" id="modelos" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 {% for modelo in modelos %}
                                 <option value="{{modelo.id}}" {{registro.modelo_id == modelo.id?" selected='selected' ":"" }}> {{ modelo.nombre}} </option>
                                 {% else %}
@@ -95,7 +95,7 @@
                     <div class="control-group">
                         <label class="control-label" for="anio">Año<sup>*</sup> </label>
                         <div class="controls">
-                            <select name="anio" class="required">
+                            <select name="anio" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="" class="number"> -- </option>
                                 {% for i in "now"|date('Y')..1900 %}
                                 <option {{registro.anio == i ? " selected='selected' " : "" }}>{{ i }} </option>
@@ -108,19 +108,19 @@
                     <div class="control-group">
                         <label class="control-label" for="km">Recorrido (Km) </label>
                         <div class="controls">
-                            <input type="text" name="km" class="number" value="{{ registro.km }}"/>
+                            <input type="text" name="km" class="number" value="{{ registro.km }}" {{ modolectura ? "disabled='true'" : "" }}/>
                         </div>
                     </div>
                     <div class="control-group">
                         <label class="control-label" for="version">Versión</label>
                         <div class="controls">
-                            <input type="text" name="version" value="{{ registro.version }}"/>
+                            <input type="text" name="version" value="{{ registro.version }}" {{ modolectura ? "disabled='true'" : "" }}/>
                         </div>
                     </div>
                     <div class="control-group">
                         <label class="control-label" for="color_id">Color<sup>*</sup></label>
                         <div class="controls">
-                            <select name="color_id" class="required">
+                            <select name="color_id" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="null"> -- </option>
                                 {% for color in colores_vehiculo %}
                                 <option value="{{ color.id }}" {{registro.color_id == color.id?" selected='selected' ":"" }}>{{ color.nombre }} </option>
@@ -131,7 +131,7 @@
                     <div class="control-group">
                         <label class="control-label" for="placa">Placa </label>
                         <div class="controls">
-                            <input type="text" name="placa" value="{{ registro.placa }}"/>
+                            <input type="text" name="placa" value="{{ registro.placa }}" {{ modolectura ? "disabled='true'" : "" }}/>
                         </div>
                     </div>
                 </div>
@@ -144,13 +144,13 @@
                     <div class="control-group">
                         <label class="control-label" for="motor">Motor <sup>*</sup> </label>
                         <div class="controls">
-                            <input type="text" name="motor"  class="required" value="{{ registro.motor }}"/>
+                            <input type="text" name="motor"  class="required" value="{{ registro.motor }}" {{ modolectura ? "disabled='true'" : "" }}/>
                         </div>
                     </div>
                     <div class="control-group">
                         <label class="control-label" for="transmision_vehiculo_id">Transmisión <sup>*</sup> </label>
                         <div class="controls">
-                            <select name="transmision_vehiculo_id"  class="required">
+                            <select name="transmision_vehiculo_id"  class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value=""> -- </option>
                                 {% for transmision in transmision_vehiculo %}
                                 <option value="{{ transmision.id }}" {{registro.transmision_vehiculo_id == transmision.id?" selected='selected' ":"" }}>{{ transmision.nombre }}</option>
@@ -163,13 +163,13 @@
                     <div class="control-group">
                         <label class="control-label" for="cilindros">N° Cilindros<sup>*</sup></label>
                         <div class="controls">
-                            <input type="text" name="cilindros" class="required number" value="{{registro.cilindros }}"/>
+                            <input type="text" name="cilindros" class="required number" value="{{registro.cilindros }}" {{ modolectura ? "disabled='true'" : "" }}/>
                         </div>
                     </div>
                     <div class="control-group">
                         <label class="control-label" for="traccion_vehiculo_id">Tracción<sup>*</sup></label>
                         <div class="controls">
-                            <select name="traccion_vehiculo_id" class="required">
+                            <select name="traccion_vehiculo_id" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="">--</option>
                                 {% for traccion in traccion_vehiculo %}
                                     <option value="{{ traccion.id }}" {{registro.traccion_vehiculo_id == traccion.id?" selected='selected' ":"" }}>{{ traccion.nombre }}</option>
@@ -187,7 +187,7 @@
                     <div class="control-group">
                         <label class="control-label" for="vidrios_ahumados">Vidrios<sup>*</sup></label>
                         <div class="controls">
-                            <select name="vidrios_ahumados" class="required">
+                            <select name="vidrios_ahumados" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="null">-- Seleccione</option>
                                 <option value="0" {{registro.vidrios_ahumados == 0 ?" selected='selected' ":"" }}>Ahumados</option>
                                 <option value="1" {{registro.vidrios_ahumados == 1 ?" selected='selected' ":"" }}>Normales</option>
@@ -197,7 +197,7 @@
                     <div class="control-group">
                         <label class="control-label" for="tapizado">Tapizado<sup>*</sup></label>
                         <div class="controls">
-                            <select name="tapizado" class="required">
+                            <select name="tapizado" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="null">-- Seleccione</option>
                                 <option value="0" {{registro.tapizado == 0 ?" selected='selected' ":"" }}>Tela</option>
                                 <option value="1" {{registro.tapizado == 1 ?" selected='selected' ":"" }}>Cuero</option>
@@ -207,7 +207,7 @@
                     <div class="control-group">
                         <label class="control-label" for="airbag">Airbag<sup>*</sup></label>
                         <div class="controls">
-                            <select name="airbag" class="required">
+                            <select name="airbag" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="">-- Seleccione</option>
                                 <option value="1" {{registro.airbag == 1 ?" selected='selected' ":"" }}>SI</option>
                                 <option value="0" {{registro.airbag == 0 ?" selected='selected' ":"" }}>NO</option>
@@ -217,7 +217,7 @@
                     <div class="control-group">
                         <label class="control-label" for="frenos_abs">Frenos ABS<sup>*</sup></label>
                         <div class="controls">
-                            <select name="frenos_abs" class="required">
+                            <select name="frenos_abs" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="">-- Seleccione</option>
                                 <option value="0" {{registro.frenos_abs == 0 ?" selected='selected' ":"" }}>NO</option>
                                 <option value="1" {{registro.frenos_abs == 1 ?" selected='selected' ":"" }}>SI</option>
@@ -229,7 +229,7 @@
                     <div class="control-group">
                         <label class="control-label" for="direccion_vehiculo_id">Dirección <sup>*</sup> </label>
                         <div class="controls">
-                        <select name="direccion_vehiculo_id" class="required">
+                        <select name="direccion_vehiculo_id" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                             <option value="">--</option>
                             {% for direccion in direccion_vehiculo %}
                             <option value="{{ direccion.id }}" {{ registro.direccion_vehiculo_id==direccion.id ? " selected='selected' " : "" }}>{{ direccion.nombre }}</option>
@@ -240,7 +240,7 @@
                     <div class="control-group">
                         <label class="control-label" for="aire_acondicionado">Aire Acondicionado<sup>*</sup></label>
                         <div class="controls">
-                            <select name="aire_acondicionado" class="required">
+                            <select name="aire_acondicionado" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="">-- Seleccione</option>
                                 <option value="1" {{registro.aire_acondicionado == 1 ?" selected='selected' ":"" }}>SI</option>
                                 <option value="0" {{registro.aire_acondicionado == 0 ?" selected='selected' ":"" }}>NO</option>
@@ -250,7 +250,7 @@
                     <div class="control-group">
                         <label class="control-label" for="estereo">Estereo <sup>*</sup></label>
                         <div class="controls">
-                            <select name="estereo" class="required">
+                            <select name="estereo" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="">-- Seleccione</option>
                                 <option value="1" {{registro.estereo == 1 ?" selected='selected' ":"" }}>SI</option>
                                 <option value="0" {{registro.estereo == 0 ?" selected='selected' ":"" }}>NO</option>
@@ -260,7 +260,7 @@
                     <div class="control-group">
                         <label class="control-label" for="blindado">Blindado<sup>*</sup></label>
                         <div class="controls">
-                            <select name="blindado" class="required">
+                            <select name="blindado" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="">-- Seleccione</option>
                                 <option value="1" {{registro.blindado == 1 ?" selected='selected' ":"" }}>SI</option>
                                 <option value="0" {{registro.blindado == 0 ?" selected='selected' ":"" }}>NO</option>
@@ -275,7 +275,7 @@
             <div class="control-group">
                 <label class="control-label" for="comentario">Características</label>
                 <div class="controls">
-                    <textarea class="input-xxlarge" cols="3" rows="3" name="comentario">{{ registro.comentario}}</textarea>
+                    <textarea class="input-xxlarge" cols="3" rows="3" name="comentario" {{ modolectura ? "disabled='true'" : "" }}>{{ registro.comentario}}</textarea>
                 </div>
             </div>
         </fieldset>
@@ -286,7 +286,7 @@
                     <div class="control-group">
                         <label class="control-label" for="precio">Precio<sup>*</sup> </label>
                         <div class="controls">
-                            <input type="text" name="precio" class="required number" value="{{ registro.precio }}"/>
+                            <input type="text" name="precio" class="required number" value="{{ registro.precio }}" {{ modolectura ? "disabled='true'" : "" }}/>
                         </div>
                     </div>
                 </div>
@@ -294,7 +294,7 @@
                     <div class="control-group">
                         <label class="control-label" for="negociable">Negociable <sup>*</sup> </label>
                         <div class="controls">
-                            <select name="negociable" class="required">
+                            <select name="negociable" class="required" {{ modolectura ? "disabled='true'" : "" }}>
                                 <option value="">-- Seleccione</option>
                                 <option value="1" {{registro.negociable == 1 ?" selected='selected' ":"" }}>SI</option>
                                 <option value="0" {{registro.negociable == 0 ?" selected='selected' ":"" }}>NO</option>
@@ -305,36 +305,36 @@
             </div>
         </fieldset>
         <fieldset>
+            {{ dump(imagenes) }}
             <legend>Fotos</legend>
             <div class="control-group">
                 <label class="control-label" for="foto1">Foto Principal <sup>*</sup> </label>
                 <div class="controls">
-                    <input type="file" name="foto1" class="required"/>
+                    <input type="file" id="foto1" name="foto1" class="required" data-id="{{ imagenes[0].id }}" value="{{ imagenes[0].url_imagen }}" {{ modolectura ? "disabled='true'" : "" }}/>
                 </div>
                 <label class="control-label" for="foto2">Foto </label>
                 <div class="controls">
-                    <input type="file" name="foto2"/>
+                    <input type="file" name="foto2" {{ modolectura ? "disabled='true'" : "" }}/>
                 </div>
                 <label class="control-label" for="foto3">Foto </label>
                 <div class="controls">
-                    <input type="file" name="foto3"/>
+                    <input type="file" name="foto3" {{ modolectura ? "disabled='true'" : "" }}/>
                 </div>
                 <label class="control-label" for="foto4">Foto </label>
                 <div class="controls">
-                    <input type="file" name="foto4"/>
+                    <input type="file" name="foto4" {{ modolectura ? "disabled='true'" : "" }}/>
                 </div>
                 <label class="control-label" for="foto5">Foto </label>
                 <div class="controls">
-                    <input type="file" name="foto5"/>
+                    <input type="file" name="foto5" {{ modolectura ? "disabled='true'" : "" }}/>
                 </div>
             </div>
         </fieldset>
         <fieldset>
             <legend>Acción</legend>
             <div class="form-actions">
-                <input class="btn" type="reset" name="borrar" value="Resetear"/>
-                {% if accion != "ver" %}
-                <input class="btn btn-primary" type="submit" name="accion" value="{{accion|title}}"/>
+                {% if get.accion != "ver" %}
+                <input class="btn btn-primary" type="submit" name="accion" value="{{get.accion|title}}"/>
                 {% endif %}
             </div>
         </fieldset>
