--- a/template/layout/base.html.twig
+++ b/template/layout/base.html.twig
@@ -13,8 +13,9 @@
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="{{constant("URL_SISTEMA")}}js/bootstrap.js"></script>
         <script src="{{constant("URL_SISTEMA")}}js/jquery-validate/jquery.validate.js"></script>
-        <script src="{{constant("URL_SISTEMA")}}js/index.js"></script>
+        <script src="{{constant('URL_SISTEMA')}}js/jquery-validate/localization/messages_es.js"></script>
         <script src="{{constant("URL_SISTEMA")}}js/formulario.js"></script>
+        <script src="{{constant("URL_SISTEMA")}}js/index.js"></script>
         <!--<script src="{{constant('URL_SISTEMA')}}js/bootstrap.min.js"></script>-->
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
